<resources>
    <string name="app_name">Rick &amp; Morty</string>

    <string name="tab_characters">CHARACTERS</string>
    <string name="tab_locations">LOCATIONS</string>
    <string name="tab_episodes">EPISODES</string>
    <string name="tab_unknown">UNKNOWN</string>

    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="search">Search&#8230;</string>
    <string name="favorite">Favorite</string>
    <string name="favorites">Favorites</string>
    <string name="un_favorite">Unfavorite</string>
    <string name="favorite_added">Added to Favorite</string>
    <string name="favorite_removed">Removed from Favorite</string>

    <string name="label_empty_result">Oops, there are no results to display</string>
    <string name="label_error_result">Oops, there was an error fetching the data</string>
    <string name="button_try_again">Try again</string>
    <string name="dialog_ok_button">OK</string>

    <string name="episode">Episode:</string>
    <string name="on_air">On Air:</string>
    <string name="characters">Nº Characters:</string>
    <string name="title_activity_settings">Settings</string>

    <string name="type_item">Type:</string>
    <string name="dimension">Dimension:</string>
    <string name="population">Population:</string>

    <!-- Preferences -->
    <string name="key_name_characters">key_name_characters</string>
    <string name="key_status">key_status</string>
    <string name="key_specie">key_specie</string>
    <string name="key_type_characters">key_type_characters</string>
    <string name="key_gender">key_gender</string>

    <string name="key_name_location">key_name_location</string>
    <string name="key_type_location">key_type_location</string>
    <string name="key_dimension">key_dimension</string>

    <string name="characters_header">Character search filtering</string>
    <string name="locations_header">Location search filtering</string>

    <string name="name">Name</string>
    <string name="name_summary">Checked to search by name</string>
    <string name="characters_list_status">Status</string>
    <string name="characters_species">Specie</string>
    <string name="characters_species_summary">Checked to search by specie</string>
    <string name="type">Type</string>
    <string name="type_summary">Checked to search by type</string>
    <string name="location">Location</string>
    <string name="location_dimension_summary">Checked to search by dimesion</string>
    <string name="characters_list_gender">Gender</string>

    <string name="locations_dimension">Dimension</string>

    <string name="alive">Alive</string>
    <string name="dead">Dead</string>

    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="genderless">Genderless</string>

    <string name="any">Any</string>
    <string name="unknown">Unknown</string>

    <string name="action_bar_subtitle_episode">Characters Episode</string>
    <string name="action_bar_subtitle_location">Characters Location</string>

    <string name="character_name_info">Name:</string>
    <string name="character_specie_info">Species:</string>
    <string name="character_origin_info">Origin:</string>
    <string name="character_location_info">Location:</string>
    <string name="character_status_info">Status:</string>

    <string name="no_favorite_yet">No favorite yet</string>

</resources>
