<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/characters_header">

        <CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/key_name_characters"
            app:summary="@string/name_summary"
            app:title="@string/name" />

        <ListPreference
            app:defaultValue="@string/any"
            app:entries="@array/status_entries"
            app:entryValues="@array/status_values"
            app:iconSpaceReserved="false"
            app:key="@string/key_status"
            app:title="@string/characters_list_status"
            app:useSimpleSummaryProvider="true" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="@string/key_specie"
            app:summary="@string/characters_species_summary"
            app:title="@string/characters_species" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="@string/key_type_characters"
            app:summary="@string/type_summary"
            app:title="@string/type" />

        <ListPreference
            app:defaultValue="@string/any"
            app:entries="@array/gender_entries"
            app:entryValues="@array/gender_values"
            app:iconSpaceReserved="false"
            app:key="@string/key_gender"
            app:title="@string/characters_list_gender"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/locations_header">

        <CheckBoxPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="@string/key_name_location"
            app:summary="@string/name_summary"
            app:title="@string/name" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="@string/key_type_location"
            app:summary="@string/type_summary"
            app:title="@string/type" />

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="@string/key_dimension"
            app:summary="@string/location_dimension_summary"
            app:title="@string/locations_dimension" />

    </PreferenceCategory>

</PreferenceScreen>
